--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     </head>
     <body>
-        <img id="bulb" src="./assets/off.jpg" width="200px" height="200px" onclick="change()">
+       <center> <img id="bulb" src="./assets/off.jpg" width="200px" height="300px" onclick="change()"></center>
         <script src="./app.js"></script>
     </body>
 </html>
